--- a/app/templates/books.html
+++ b/app/templates/books.html
@@ -4,7 +4,7 @@
 <div class="top-pad">
     {% for book in books %}
     <div class="well">
-        <a href="http://127.0.0.1:5000/book/{{ book['id'] }}"><img src="{{ book['image'] }}"/></a>
+        <a href="/book/{{ book['id'] }}"><img src="{{ book['image'] }}"/></a>
 
         <h2>{{ book['title'] }}</h2>
 
@@ -23,7 +23,7 @@
     <ul class="pagination">
         {% if pagination.has_prev %}
             <li>
-                <a href="http://127.0.0.1:5000/books/php mysql/page/1" aria-label="Previous">
+                <a href="/books/{{keywords}}/page/1" aria-label="Previous">
                     <span aria-hidden="true">&laquo;</span>
                 </a>
             </li>
@@ -36,7 +36,7 @@
         {% for page in pagination.iter_pages() %}
             {% if page %}
                 {% if page != pagination.page %}
-                    <li><a href="http://127.0.0.1:5000/books/php mysql/page/{{ page }}">{{ page }}</a></li>
+                    <li><a href="/books/{{keywords}}/page/{{ page }}">{{ page }}</a></li>
                 {% else %}
                     <li class="active"><a href="#">{{ page }}</a></li>
                 {% endif %}
@@ -47,7 +47,7 @@
 
         {% if pagination.has_next %}
             <li>
-                <a href="http://127.0.0.1:5000/books/php mysql/page/{{ pagination.pages }}" aria-label="Next">
+                <a href="/books/{{keywords}}/page/{{ pagination.pages }}" aria-label="Next">
                     <span aria-hidden="true">&raquo;</span>
                 </a>
             </li>
