--- a/app/templates/paginator.html
+++ b/app/templates/paginator.html
@@ -25,7 +25,7 @@
         <a href="/book/{{ book['id'] }}"><h4>{{ book['title'] }}</h4></a>
         <!--<p><b>ID</b>: {{ book['id'] }}</p>-->
         <!--<p><b>ISBN</b>: {{ book['isbn'] }}</p>-->
-        <p><b>Book Description</b>: {{ book['description'] }}</p>
+        <p>{{ book['description'] }}</p>
     </div>
     {% endfor %}
 </div>
